--- a/openshift/coolstore-deployment-template.yaml
+++ b/openshift/coolstore-deployment-template.yaml
@@ -152,8 +152,8 @@ objects:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-#          - name: DISABLE_CART_DISCOVERY
-#            value: true
+          - name: DISABLE_CART_DISCOVERY
+            value: "true"
           image: library/coolstore-gw:${APP_VERSION}
           livenessProbe:
             exec:
