--- a/openshift/coolstore-deployment-template.yaml
+++ b/openshift/coolstore-deployment-template.yaml
@@ -7,7 +7,7 @@ metadata:
     description: CoolStore demo microservices deployments persistent template
     iconClass: icon-java
     tags: microservice,jboss,spring
-  name: coolstore
+  name: coolstore-application
 objects:
 - apiVersion: v1
   groupNames: null
